@@ -87,6 +87,12 @@ bool Buffer::open_file(uint32_t segment_no, uint32_t flags, size_t defaultsize)
     if (m_ci[index].m_fd != -1)
     {
         Logging::trace(m_ci[index].m_cachefile, "Cache file is already open.");
+
+        if (defaultsize)
+        {
+			// Make sure the requested size is available
+            reserve(defaultsize);
+        }
         // Already open
         return true;
     }
