@@ -10,6 +10,9 @@ Important changes in 2.14 (2023-01-XX):
   allocation.
 * Bugfix: Avoid race condition causing the inter-process semaphore creation
   to fail for sencond process.
+* Optimisation: When reopening after invalidating the cache, the size
+  remained at 0. The original size now is once more reserved in order to
+  prevent reallocations.
 * Optimisation: To avoid reallocations, save enough space in the cache buffer
   to hold the entire frame set.
 * Optimisation: Checking folders to see if they can be transcoded is completely
